--- a/intro.tex
+++ b/intro.tex
@@ -49,7 +49,7 @@ The quantum obfuscation is studied more rigorously in \cite{AF16arxiv}, where th
 
 
 
-
+\anote{Make sure we emphasize somewhere why the paper belong in the ICT conference--- perhaps because the reduction is information-theoretic, assuming classical iO?}
 
 
 \Anne{Is there an advantage in using quantum states to obfuscate programs? I would suspect that one big advantage would be unclonable programs (they cannot be copied). Is this too ambitious to look at?  What does it even mean to have unclonable programs? (this links with work that I am currently doing with Sébastien Lord, a PhD student).}
